# kafka-bundle

./: .gitignore  Makefile  README.md  concierge.yaml  conftest.py  metadata.yaml  pyproject.toml  requirements.txt  spread.yaml  tox.ini  update_bundle.py
.github/: .jira_sync_config.yaml
.github/workflows/: ci.yaml  ci_e2e copy.yaml  ci_e2e.yaml  cron.yaml  integrate.yaml  on_bundle_update_available.yaml  on_pull_request.yaml  on_push.yaml  publish.yaml  release.yaml  sync_issue_to_jira.yaml  update_bundle.yaml
docs/: e2e_testing_guide.md
lib/charms/kafka/v0/: kafka_snap.py
lib/charms/operator_libs_linux/v1/: snap.py
overlays/: dev.yaml  production.yaml
releases/3/kafka/: README.md  bundle.yaml  bundle.yaml.j2  cos-overlay.yaml.j2
releases/latest/k8s/: kafka-k8s-tls.yaml  kafka-k8s.yaml
releases/latest/k8s/kafka-k8s/: README.md  bundle.yaml  metadata.yaml
releases/latest/k8s/kafka-k8s-tls/: bundle.yaml
releases/latest/kafka/: bundle.yaml
releases/latest/machine/: kafka-tls.yaml  kafka.yaml
releases/latest/machine/kafka/: README.md  bundle.yaml
releases/latest/machine/kafka-tls/: bundle.yaml
terraform/: README.md  applications.tf  integrations.tf  machines.tf  main.tf  model.tf  outputs.tf  providers.tf  variables.tf  vars.tf
terraform/dev/: dev.auto.tfvars  model.tf
terraform/example/: complex-tls.tfvars.json  simple.tfvars.json
terraform/examples/: simple.tfvars.json
terraform/examples/tls/: README.md  main.tf  providers.tf  variables.tf
terraform/prod/: applications.tf  machines.tf  prod.auto.tfvars
tests/integration/: kafka_helpers.py  test_bundle.py  test_provider.py  test_scaling.py  zookeeper_helpers.py
tests/integration/app-charm/: actions.yaml  charmcraft.yaml  metadata.yaml  requirements.txt
tests/integration/bundle/: conftest.py  cos_helpers.py  kafka_helpers.py  literals.py  multi_cloud.py  test_bundle.py
tests/integration/e2e/: conftest.py  helpers.py  literals.py  test_backup.py  test_basic_flow.py  test_cos.py  test_e2e.py  test_password_rotation.py
tests/integration/terraform/: component_validation.py  conftest.py  helpers.py  test_cos.py  test_new_terraform.py  test_terraform.py
tests/spread/e2e/tls-enabled/: task.yaml
(+22 files in other folders)
