# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["unstable"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "kafka-bundle"
version = "1.0"
description = "kafka-bundle"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.render]
optional = true

[tool.poetry.group.render.dependencies]
jinja2-cli = "*"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = "^22.3.0"
ruff = ">=0.0.157"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22.3.0"
ruff = ">=0.0.157"
codespell = ">=2.2.2"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
pytest = ">=7.2"
coverage = { extras = ["toml"], version = ">7.0" }

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = ">=7.2"
coverage = { extras = ["toml"], version = ">7.0" }
jubilant="^1.0.0"
kazoo = ">=2.8"
tenacity = ">=7.0"
pure-sasl = ">=0.5"
kafka-python = ">=2.0"
requests = ">2.25"
boto3 = "^1.34.159"
pyopenssl = "^24.2.1"
pymongo = "^4.3.3"
boto3-stubs = { extras = ["s3"], version = "^1.35.8" }
pytest-microceph = { git = "https://github.com/canonical/data-platform-workflows", tag = "v22.0.0", subdirectory = "python/pytest_plugins/microceph" }

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104", "E999"] }
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
mccabe.max-complexity = 10
